--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -31,11 +31,12 @@
     appearance: none;
     position: relative;
     &:after {
-      content: "\e901";
-      font-family: "icomoon";
+      content: '\e901';
+      font-family: 'icomoon';
       position: absolute;
-      right: 0;
-      top: 0;
+      right: 1rem;
+      top: 3.15rem;
+      z-index: 9;
       font-size: $font-size-16;
       color: $color-2;
     }
@@ -53,14 +54,14 @@
       width: 20px;
       margin-top: 0.2rem;
 
-      input[type="checkbox"] {
+      input[type='checkbox'] {
         width: 20px;
         height: 20px;
         outline: none;
         accent-color: var(--color-primary);
 
         &::before {
-          content: "";
+          content: '';
           position: absolute;
           border: 2px solid #000;
           border-radius: 0px;
@@ -76,7 +77,7 @@
         }
       }
 
-      input[type="checkbox"]:checked {
+      input[type='checkbox']:checked {
         background-color: var(--bg-color-2);
       }
     }
@@ -108,8 +109,8 @@
     .dropdown-arrow {
       position: relative;
       &:after {
-        content: "\e901";
-        font-family: "icomoon";
+        content: '\e901';
+        font-family: 'icomoon';
         position: absolute;
         right: 0;
         top: 2rem;
