--- a/src/scss/brand/theme/_colors.scss
+++ b/src/scss/brand/theme/_colors.scss
@@ -29,6 +29,7 @@
   --border-color-4: #484848;
   --border-color-5: #9e9e9e;
   --border-color-6: #dbdbdb;
+  --border-color-7: #999595;
   --color-primary: #30ea03;
   --color-secondary-aqua: #47ffe5;
   --color-secondary-pink: #f900ff;
@@ -54,6 +55,7 @@ $border-color-3: var(--border-color-3);
 $border-color-4: var(--border-color-4);
 $border-color-5: var(--border-color-5);
 $border-color-6: var(--border-color-6);
+$border-color-7: var(--border-color-7);
 $color-grey-1: #484848;
 $color-grey-2: #9e9e9e;
 $color-grey-3: #eaeaea;
