add file in libs folder

--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -218,5 +218,5 @@ a[style*='visibility:hidden'] {
   flex-direction: column;
 }
 .text-color-3 {
-  color: $color-3;
+  color: $color-3 !important;
 }
