--- a/src/scss/default/theme/utility-classes/_width-utility-classes.scss
+++ b/src/scss/default/theme/utility-classes/_width-utility-classes.scss
@@ -15,7 +15,7 @@
     max-width: $max-content-width !important;
   }
 
-  @media (min-width: $breakpoint-xl-min) {
+  @media (min-width: ($breakpoint-xl-min + 1)) {
     max-width: 1440px !important;
   }
 
