--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -40,7 +40,7 @@
   box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
 }
 
-.half-carousel .carousel-slides .carousel-slide.active .carouselSlide {
+.carousel .carousel-slides .carousel-slide.active .carouselSlide {
   margin-left: 0;
 }
 
