--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -16,6 +16,9 @@
   .leader-card-bg {
     background-color: $color-grey-3;
   }
+  .accordion {
+    z-index: 0;
+  }
 }
 
 // .leader-card-adjust {
