--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -92,8 +92,8 @@ header {
               padding-right: 20px;
             }
             &:after {
-              content: '\e91a';
-              font-family: 'icomoon';
+              content: "\e91a";
+              font-family: "icomoon";
               position: absolute;
               top: 4px;
               left: 5.5rem;
@@ -118,8 +118,8 @@ header {
             position: relative;
             padding-right: 20px;
             &:after {
-              content: '\e90f';
-              font-family: 'icomoon';
+              content: "\e90f";
+              font-family: "icomoon";
               position: absolute;
               right: 1px;
               top: 4px;
@@ -136,7 +136,7 @@ header {
             position: relative;
             padding-right: 20px;
             &:after {
-              content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/other-contrast.png');
+              content: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/other-contrast.png");
               position: absolute;
               right: 0;
               top: 4px;
@@ -276,7 +276,7 @@ header {
         left: auto;
         right: -15px;
         top: -2px;
-        background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg');
+        background-image: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg");
         background-size: auto;
         width: 32px;
         height: 32px;
@@ -284,7 +284,7 @@ header {
     }
     &.nav-opened {
       .megamenu-main-nav > .component-content .navigation-mobile-menu {
-        background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/cross-icon.svg');
+        background-image: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/cross-icon.svg");
         background-size: auto;
       }
     }
@@ -338,7 +338,7 @@ header {
           height: 4rem;
           padding: 1rem 2rem 1rem 1rem !important;
         }
-        input[type='text'] {
+        input[type="text"] {
           width: 94% !important;
           border: 2px solid $color-black;
           display: none !important;
@@ -355,7 +355,7 @@ header {
         justify-content: space-evenly !important;
         align-items: flex-start;
       }
-      input[type='text'] {
+      input[type="text"] {
         height: auto;
         color: $color-black;
         background-size: 18px auto;
@@ -374,8 +374,8 @@ header {
         }
       }
       button {
-        content: '\f0d1';
-        font-family: 'icomoon';
+        content: "\f0d1";
+        font-family: "icomoon";
         position: relative;
         width: 16px !important;
         height: 16px !important;
@@ -406,7 +406,7 @@ header {
           }
         }
         &::before {
-          content: 'Search';
+          content: "Search";
           position: absolute;
           left: -56px;
           top: 0px;
@@ -418,7 +418,7 @@ header {
           }
         }
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           left: -50px;
           right: 0;
@@ -477,15 +477,10 @@ header {
     }
   }
 }
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button {
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button {
   opacity: 1 !important;
   &::before {
-    content: 'Search';
+    content: "Search";
     position: absolute;
     left: -48px;
     top: 1px;
@@ -538,44 +533,18 @@ header {
     padding-left: 0rem;
   }
 }
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button,
-.megamenu-navigation
-  .megamenu-search:focus
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button,
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button:hover,
-.megamenu-navigation
-  .megamenu-search:focus
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button:hover {
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button,
+.megamenu-navigation .megamenu-search:focus > .component-content > .paragraphSystem .searchBox button,
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button:hover,
+.megamenu-navigation .megamenu-search:focus > .component-content > .paragraphSystem .searchBox button:hover {
   opacity: 0;
   width: 0;
   margin: 0;
 }
 
 @media (max-width: 991px) {
-  .megamenu-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-mobile-menu,
-  .simple-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-mobile-menu {
+  .megamenu-navigation .megamenu-main-nav > .component-content > .navigation-mobile-menu,
+  .simple-navigation .megamenu-main-nav > .component-content > .navigation-mobile-menu {
     right: 5px;
     left: auto;
     top: -5px;
@@ -585,18 +554,8 @@ header {
     margin: 0 !important;
   }
   .reference-megamenu .megamenu-top-bar-right .richText-content p,
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p {
     min-height: 30px;
     display: inline-block;
     color: $color-black !important;
@@ -605,48 +564,20 @@ header {
     line-height: 30px;
     width: auto;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > *,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > * {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > *,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > * {
     text-align: left;
     padding: 0;
     margin: 0 !important;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem {
     padding: 0px;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    > *,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    > * {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem > *,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem > * {
     text-align: left;
   }
   .megamenu-navigation
@@ -665,16 +596,8 @@ header {
     justify-content: left;
     padding: 0px; /* min-height: 26px; */
   }
-  .megamenu-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-root.navigation-level1
-    > .navigation-item,
-  .simple-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-root.navigation-level1
-    > .navigation-item {
+  .megamenu-navigation .megamenu-main-nav > .component-content > .navigation-root.navigation-level1 > .navigation-item,
+  .simple-navigation .megamenu-main-nav > .component-content > .navigation-root.navigation-level1 > .navigation-item {
     justify-content: left;
     text-align: left; /* min-height: 26px; */
   }
@@ -692,10 +615,7 @@ header {
   margin: auto !important;
 }
 
-.megamenu-navigation
-  .megamenu-nav-container.sticked-js
-  > .component-content
-  > .paragraphSystem {
+.megamenu-navigation .megamenu-nav-container.sticked-js > .component-content > .paragraphSystem {
   position: relative;
 }
 
@@ -782,13 +702,8 @@ header {
     line-height: $line-height-150;
   }
 }
-.megamenu-navigation
-  .megamenu-search
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  input[type='text'] {
-  background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/green-search.svg');
+.megamenu-navigation .megamenu-search > .component-content > .paragraphSystem .searchBox input[type="text"] {
+  background-image: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/green-search.svg");
   background-color: #eaeaea;
   background-size: 2rem !important;
   background-position: center right 0 !important;
@@ -841,12 +756,7 @@ header {
       }
     }
   }
-  .megamenu-navigation
-    .megamenu--newco
-    .megamenu-top-bar-right
-    .header-icon-two
-    p
-    a:after {
+  .megamenu-navigation .megamenu--newco .megamenu-top-bar-right .header-icon-two p a:after {
     right: -1.1rem;
   }
   .megamenu-navigation .megamenu-submenu-item .default-style ul li {
@@ -864,7 +774,7 @@ header {
     &.page-planet-and-people,
     &.page-careers {
       a::before {
-        content: '';
+        content: "";
         border: solid #a19e9e;
         border-width: 0 3px 3px 0;
         display: inline-block;
@@ -903,9 +813,7 @@ header {
   }
 }
 
-.megamenu-navigation
-  .megamenu--newco.mobile-megamenu-search
-  > .component-content {
+.megamenu-navigation .megamenu--newco.mobile-megamenu-search > .component-content {
   max-height: 95px;
   @include xs {
     max-height: initial;
@@ -932,12 +840,7 @@ header {
     padding: 0;
   }
 
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p {
     text-align: left;
     margin-left: 0.25rem;
   }
@@ -950,14 +853,8 @@ header {
     margin-top: 2.5rem;
   }
 
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem {
     padding: 0 !important;
   }
 
@@ -965,24 +862,13 @@ header {
     display: block;
     width: 100%;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem .richText p {
     text-align: left;
     width: 100%;
     margin-left: 0.25rem;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem {
     padding: 0;
   }
   .megamenu-navigation .megamenu-top-bar-left {
@@ -1002,11 +888,7 @@ header {
 }
 
 @media only screen and (min-width: 1024px) {
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > div {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > div {
     margin-left: 0;
   }
 }
@@ -1023,11 +905,7 @@ header {
 .megamenu-top-bar-right .megamenu-search {
   height: auto !important;
 }
-.megamenu-main-nav
-  > *
-  > .navigation-root.navigation-level1
-  .navigation-item
-  > a {
+.megamenu-main-nav > * > .navigation-root.navigation-level1 .navigation-item > a {
   padding: 0 1rem;
 }
 .megamenu-logo {
@@ -1036,4 +914,19 @@ header {
       transform: translateY(0);
     }
   }
+}
+.carousel-cq
+  .lSSlideOuter
+  .lSSlideWrapper
+  .carousel-slides
+  .carousel-slide
+  .carouselSlide
+  .carousel-content
+  .box
+  .paragraphSystem
+  .imageCompatibleMarkup:after {
+  color: #000;
+}
+.reference-whats-new .carousel-cq .lSSlideOuter .lSSlideWrapper .carousel-slides .carousel-slide {
+  margin-top: 4rem;
 }
