--- a/src/scss/brand/components/quote/_index.scss
+++ b/src/scss/brand/components/quote/_index.scss
@@ -1,19 +1,18 @@
-.profile-quote {
-  background-color: $color-primary;
-  blockquote {
-    margin: 0;
-    padding: 2rem;
-    .quote-title {
-      position: relative;
-      &::before {
-        content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-quote.png');
-        position: absolute;
-        background-size: 40px;
-        left: 0;
-        top: -2rem;
-      }
+blockquote {
+  margin: 0;
+  padding: 2rem;
+  .quote-title {
+    position: relative;
+    &::before {
+      content: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-quote.png");
+      position: absolute;
+      background-size: 40px;
+      left: 0;
+      top: -2rem;
     }
   }
+}
+.profile-quote {
   .leader-name {
     text-align: right;
   }
