--- a/src/scss/brand/components/quote/_index.scss
+++ b/src/scss/brand/components/quote/_index.scss
@@ -4,7 +4,7 @@ blockquote {
   .quote-title {
     position: relative;
     &::before {
-      content: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-quote.png");
+      content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-quote.png');
       position: absolute;
       background-size: 40px;
       left: 0;
