--- a/src/scss/brand/theme/_colors.scss
+++ b/src/scss/brand/theme/_colors.scss
@@ -66,6 +66,7 @@ $color-secondary-lime: var(--color-secondary-lime);
 $color-active: var(--color-active);
 $color-alert: var(--color-alert);
 $color-error: var(--color-error);
+$bg-color-3: var(--bg-color-3);
 
 $gray-100: $color-grey-1;
 $gray-200: $color-grey-2;
