--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -57,7 +57,7 @@
   height: 60px;
   text-align: center;
   line-height: 60px;
-  background-color: #fff;
+  background-color: $color-white;
   border-radius: 30px;
   &:after {
     content: '\e906';
@@ -70,12 +70,15 @@
   height: 60px;
   text-align: center;
   line-height: 60px;
-  background-color: #fff;
+  background-color: $color-white;
   border-radius: 30px;
   &:after {
     content: '\e907';
     font-family: 'icomoon';
   }
+}
+.lSSlideWrapper .lSSlide {
+  margin-top: 3rem;
 }
 
 .half-carousel.leader-card-adjust {
