--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -239,47 +239,64 @@ a[style*='visibility:hidden'] {
 }
 
 .p-m-x-1-5 {
-  padding: 0 1.5rem !important;
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
   @include sm {
-    padding: 0;
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
   }
 }
 
-.p-d-1-5 {
+.p-m-1-5 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
   @include sm {
-    padding: 1.5rem;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+}
+
+.p-m-y-1-5 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+  @include sm {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
   }
 }
 
 .p-d-x-1-5 {
   @include sm {
-    padding: 0 1.5rem;
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
   }
 }
 
 .p-d-y-1-5 {
   @include sm {
-    padding: 1.5rem 0;
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
+  }
+}
+.p-d-1-5 {
+  @include sm {
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
   }
 }
 
-.p-m-1-5 {
-  padding: 1.5rem;
-  @include sm {
-    padding: 0;
-  }
-}
-
-.p-m-x-1-5 {
-  padding: 0 1.5rem;
-  @include sm {
-    padding: 0;
-  }
-}
-
-.p-m-y-1-5 {
-  padding: 1.5rem 0;
-  @include sm {
-    padding: 0;
+.object-fit-cover {
+  > .component-content {
+    height: 100% !important;
+    img {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
