--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -300,7 +300,7 @@ a[style*='visibility:hidden'] {
   > .component-content {
     height: 100% !important;
     img {
-      height: 100%;
+      height: 100% !important;
       object-fit: cover;
     }
   }
