--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -4,6 +4,9 @@
     background-color: $color-grey-3;
     padding: 1rem;
     width: 100%;
+    @include sm {
+      width: 50%;
+    }
     p {
       margin: 0;
     }
