--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -43,7 +43,9 @@
 .carousel .carousel-slides .carousel-slide.active .carouselSlide {
   margin-left: 0;
 }
-
+.carousel img {
+  width: 100%;
+}
 .half-carousel .lSSlideOuter {
   overflow: visible;
 }
