--- a/src/scss/brand/components/overlap-content/_index.scss
+++ b/src/scss/brand/components/overlap-content/_index.scss
@@ -34,3 +34,12 @@
     left: auto;
   }
 }
+.content-over-image {
+  @include sm {
+    position: absolute;
+    top: 0;
+    margin: 5rem;
+    left: 0;
+    right: 0;
+  }
+}
