contact js change

--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -45,6 +45,7 @@
       outline: none;
       accent-color: var(--color-primary);
       top: -2.5rem;
+      position: absolute;
       &::before {
         content: '';
         position: absolute;
