--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -347,12 +347,17 @@
   }
 }
 
-.leader-card-adjust {
-  .reference-leader-profile {
-    .media-container {
-      @include sd {
-        flex-basis: 100%;
-      }
+.reference-leader-profile {
+  .media-container {
+    width: 100%;
+    @include sm {
+      width: 50%;
+    }
+  }
+  .card-content-container {
+    width: 100%;
+    @include sm {
+      width: 50%;
     }
   }
 }
