--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -156,6 +156,9 @@ a {
 .border-lime {
   border: 1px solid $color-secondary-lime;
 }
+.bg-color-lime {
+  background-color: $color-secondary-lime;
+}
 
 /* global css end */
 
