--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -1,10 +1,6 @@
 /* contact form */
 
 .haleon-contact-form {
-  label {
-    display: block;
-    font-weight: 600;
-  }
 
   input,
   select,
@@ -67,7 +63,9 @@
       background-color: var(--bg-color-2);
     }
   }
-  .contact-desc-haleon {
+  .privacy-desc-haleon {
+    font-size: 1.125rem;
+    font-size: $font-normal;
     padding: 1rem 2rem 0;
   }
 
@@ -77,10 +75,13 @@
   }
 
   .group-form {
-    position: relative;
-
+    display: block;
+    font-weight: 600;
     .input-required {
       color: #c30000;
+      font-size: 0.875rem;
+      line-height: 1.25;
+      display: none;
     }
     .dropdown-arrow {
       position: relative;
@@ -107,9 +108,6 @@
   .err-email-msg {
     color: #c30000 !important;
   }
-}
-.default-visible-hidden {
-  display: none;
 }
 .label-form {
   margin: 0.75rem 0;
