--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -113,5 +113,6 @@
   margin: 0.75rem 0;
   font-size: 1.5rem !important;
   line-height: 120% !important;
+  display: block;
 }
 /* contact form end */
