--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -19,7 +19,6 @@
     width: 100%;
     height: auto;
     padding: 1rem;
-    margin-bottom: 0;
   }
 
   select {
@@ -114,5 +113,8 @@
   font-size: 1.5rem !important;
   line-height: 120% !important;
   display: block;
+}
+.pos-absolute{
+  position: absolute;
 }
 /* contact form end */
