--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -186,7 +186,7 @@ strong {
   text-align: right;
 }
 
-a[style*='visibility:hidden'] {
+a[style*="visibility:hidden"] {
   padding: 0;
   font-size: 0;
   line-height: 0;
@@ -243,7 +243,14 @@ a[style*='visibility:hidden'] {
   width: 100%;
 }
 .max-width-quarter {
-  max-width: 24%
+  max-width: 24%;
+}
+.column-5 {
+  @include sm {
+    flex-basis: calc(100% / 5);
+    max-width: calc(100% / 5);
+    width: calc(100% / 5);
+  }
 }
 .width-m-100 {
   @media screen and (max-width: 767px) {
