--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -74,7 +74,7 @@ header {
     }
     .megamenu-top-bar-right {
       * {
-        color: $color-grey-2;
+        color: $color-black;
       }
       .header-icon-one {
         margin-left: 0 !important;
@@ -218,7 +218,7 @@ header {
           max-width: 115px;
           min-width: auto;
           margin-left: -0.75rem;
-          margin-top: -0.25rem;
+          margin-top: 0;
           @include sd {
             width: 250px;
             min-width: 250px;
@@ -275,16 +275,22 @@ header {
       > .component-content > .navigation-mobile-menu {
         left: auto;
         right: -15px;
-        top: -2px;
-        background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg');
+        top: 0px;
+        // background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg');
+        content: '\e916';
+        font-family: 'icomoon';
+        font-size: 1rem;
         background-size: auto;
-        width: 32px;
-        height: 32px;
+        width: 28px;
+        height: 28px;
       }
     }
     &.nav-opened {
       .megamenu-main-nav > .component-content .navigation-mobile-menu {
-        background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/cross-icon.svg');
+        // background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/cross-icon.svg');
+        content: '\e90e';
+        font-family: 'icomoon';
+        font-size: 1rem;
         background-size: auto;
       }
     }
@@ -298,7 +304,13 @@ header {
       top: -6px !important;
       max-width: 8% !important;
     }
-
+    @media (min-width: 1535px) {
+      max-width: 10% !important;
+    }
+    @media (min-width: $breakpoint-md-min) {
+      width: 12%;
+      max-width: 12%;
+    }
     @media (min-width: $breakpoint-sd-min) {
       width: 11%;
       order: 4;
@@ -310,6 +322,12 @@ header {
     }
     @media (min-width: 1920px) {
       max-width: 8.5% !important;
+    }
+    @media (min-width: 2132px) {
+      max-width: 7.5% !important;
+    }
+    @media (min-width: 2880px) {
+      max-width: 6.5% !important;
     }
     @media only screen and (min-width: 1024px) {
       right: -18px;
@@ -475,6 +493,9 @@ header {
     }
     @media (min-width: 1920px) {
       margin-left: 14%;
+    }
+    @media (min-width: 2880px) {
+      margin-left: 15%;
     }
   }
 }
